<resources>
    <string name="dontcallme">Don\'t call me that!</string>
    <string name="thankyou">Thank you</string>
    <string name="welcome"> Welcome!</string>
    <string name="entername">Enter your name</string>
    <string name="next">Next</string>

    <string name="lab4Title">CST2335 Lab 4</string>
    <string name="typehere">Type Here</string>
    <string name="add">Add</string>
    <string name="urgent">Urgent</string>
    <string name="deletethis">Do you want to delete this?</string>
    <string name="rowis">The selected row is: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="newsfeed">News Feed</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="favs">Favorites</string>

    <string name="click">Click</string>
    <string name="here">here</string>
    <string name="tovisitthewebsite">to visit the website.</string>
    <string name="removefav">Remove Favorite</string>
    <string name="link">Link</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="favadded">Favorite Added</string>
    <string name="favexists">Favorite Exists</string>
    <string name="Description">Description</string>
    <string name="clicktoaddtofav">Click to add to favorites!</string>
    <string name="UserSettings">User Settings</string>
    <string name="SetChangeUsername">Set/Change Username</string>
    <string name="Help">Help</string>
    <string name="setchangeusernamehelptext">Use the set/change username to change your current username, or set one up!</string>
    <string name="yourdesiredusername">Your desired username</string>
    <string name="submitchange">Submit Change</string>
    <string name="userfavs">User Favorites</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="Settings">Settings</string>
    <string name="Profile">Profile</string>
    <string name="settingshelptext">This is the settings panel, you can change your username in here.</string>
    <string name="newsfeedhelptext">This is the newsfeed, scroll around for some content, click the articles for more details</string>
    <string name="profilehelptext">This is your profile, for now you can view your username</string>
    <string name="favhelptext">This is the favorites, view your favorites</string>
    <string name="yourusernameis">Your username is:</string>
    <string name="snackbartext">Favorite Removed</string>
    <string name="snackdismiss">Dismiss</string>

</resources>