<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="162dp"
        android:layout_height="36dp"

        android:hint="@string/welcome"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttondontcallme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/dontcallme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/buttonthankyou"
        android:layout_width="173dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/thankyou"
        app:layout_constraintStart_toEndOf="@id/buttondontcallme"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>